{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 31,
  "lineage": "3757f21d-5079-30ce-c5ad-d4e581e938d4",
  "resources": [
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-090a142dd9b5a1494",
            "id": "rtb-090a142dd9b5a1494",
            "owner_id": "664160007404",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0988c95beea90f191",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "test12"
            },
            "vpc_id": "vpc-00d8dc4b459c06427"
          },
          "dependencies": [
            "module.example_vpc.aws_internet_gateway.gw",
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f63db601b82ff5f",
            "arn": "arn:aws:ec2:ap-south-1:664160007404:instance/i-0b8b7597d480b2311",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b8b7597d480b2311",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0bdbc59bf64b06c51",
            "private_dns": "ip-10-0-0-121.ap-south-1.compute.internal",
            "private_ip": "10.0.0.121",
            "public_ip": "65.0.183.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d4039cd72d257e4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d885925cf9932f47",
            "tags": {
              "Name": "TerraformDemo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0407521df50faa181"
            ]
          },
          "dependencies": [
            "module.example_vpc.aws_security_group.ec2",
            "module.example_vpc.aws_subnet.subnet",
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0988c95beea90f191",
            "owner_id": "664160007404",
            "tags": {
              "Env": "test12",
              "Name": "test12_gw"
            },
            "vpc_id": "vpc-00d8dc4b459c06427"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:664160007404:security-group/sg-0407521df50faa181",
            "description": "EC2 security group (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0407521df50faa181",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Telnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test12-ec2-sg",
            "name_prefix": null,
            "owner_id": "664160007404",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00d8dc4b459c06427"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:664160007404:subnet/subnet-0d885925cf9932f47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d885925cf9932f47",
            "map_public_ip_on_launch": true,
            "owner_id": "664160007404",
            "tags": {
              "Env": "test12",
              "Name": "test12_subnet"
            },
            "vpc_id": "vpc-00d8dc4b459c06427"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:664160007404:vpc/vpc-00d8dc4b459c06427",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b6379d75179ecec",
            "default_route_table_id": "rtb-090a142dd9b5a1494",
            "default_security_group_id": "sg-063a2e771ceaedade",
            "dhcp_options_id": "dopt-b43c3ddc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00d8dc4b459c06427",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090a142dd9b5a1494",
            "owner_id": "664160007404",
            "tags": {
              "Env": "test12",
              "Name": "test12_vpc"
            }
          }
        }
      ]
    }
  ]
}